python-compiler/tests/snapshots/complex_control_flow__fibonacci_iterative.snap
---
source: tests/complex_control_flow.rs
expression: llvm_ir
---
; ModuleID = 'main'
source_filename = "main"

@int_format_string = private unnamed_addr constant [4 x i8] c"%d\0A\00", align 1

; Function Attrs: nofree nounwind
define noundef i32 @main() local_unnamed_addr #0 {
entry:
  br label %loop_body

loop_body:                                        ; preds = %entry, %loop_body
  %signed_payload157 = phi i64 [ 0, %entry ], [ %signed_payload, %loop_body ]
  %a.0156 = phi i64 [ 9221120237041090560, %entry ], [ %b.0155, %loop_body ]
  %b.0155 = phi i64 [ 9221120237041090561, %entry ], [ %nanboxed, %loop_body ]
  %payload_to_f64 = sitofp i64 %signed_payload157 to double
  %extract_payload29 = and i64 %a.0156, 281474976710655
  %is_negative31.not = icmp ult i64 %extract_payload29, 140737488355328
  %masksel153 = select i1 %is_negative31.not, i64 0, i64 -281474976710656
  %signed_payload33 = or disjoint i64 %masksel153, %extract_payload29
  %payload_to_f6434 = sitofp i64 %signed_payload33 to double
  %to_int = fptosi double %payload_to_f6434 to i64
  %printf_int = tail call i32 (ptr, ...) @printf(ptr nonnull dereferenceable(1) @int_format_string, i64 %to_int)
  %extract_payload80 = and i64 %b.0155, 281474976710655
  %is_negative82.not = icmp ult i64 %extract_payload80, 140737488355328
  %masksel154 = select i1 %is_negative82.not, i64 0, i64 -281474976710656
  %signed_payload84 = or disjoint i64 %masksel154, %extract_payload80
  %payload_to_f6485 = sitofp i64 %signed_payload84 to double
  %addtmp = fadd double %payload_to_f6485, %payload_to_f6434
  %payload_to_i64 = fptosi double %addtmp to i64
  %payload_masked = and i64 %payload_to_i64, 281474976710655
  %nanboxed = or disjoint i64 %payload_masked, 9221120237041090560
  %addtmp133 = fadd double %payload_to_f64, 1.000000e+00
  %payload_to_i64143 = fptosi double %addtmp133 to i64
  %payload_masked144 = and i64 %payload_to_i64143, 281474976710655
  %is_negative.not = icmp ult i64 %payload_masked144, 140737488355328
  %masksel = select i1 %is_negative.not, i64 0, i64 -281474976710656
  %signed_payload = or disjoint i64 %masksel, %payload_masked144
  %cmptmp = icmp slt i64 %signed_payload, 10
  br i1 %cmptmp, label %loop_body, label %loop_exit

loop_exit:                                        ; preds = %loop_body
  ret i32 0
}

; Function Attrs: nofree nounwind
declare noundef i32 @printf(ptr nocapture noundef readonly, ...) local_unnamed_addr #0

attributes #0 = { nofree nounwind }
