python-compiler/tests/snapshots/complex_control_flow__fibonacci_recursive.snap
---
source: tests/complex_control_flow.rs
expression: llvm_ir
---
; ModuleID = 'main'
source_filename = "main"

@int_format_string = private unnamed_addr constant [4 x i8] c"%d\0A\00", align 1
@float_format_string = private unnamed_addr constant [4 x i8] c"%f\0A\00", align 1

; Function Attrs: nofree nounwind
define i64 @fib(i64 %0) local_unnamed_addr #0 {
entry:
  %check_qnan = and i64 %0, 9221120237041090560
  %is_float.not.not = icmp eq i64 %check_qnan, 9221120237041090560
  %i64_to_f64 = bitcast i64 %0 to double
  %extract_payload = and i64 %0, 281474976710655
  %is_negative.not = icmp ult i64 %extract_payload, 140737488355328
  %masksel = select i1 %is_negative.not, i64 0, i64 -281474976710656
  %signed_payload = or disjoint i64 %masksel, %extract_payload
  %payload_to_f64 = sitofp i64 %signed_payload to double
  %final_payload = select i1 %is_float.not.not, double %payload_to_f64, double %i64_to_f64
  %cmptmp = fcmp ugt double %final_payload, 1.000000e+00
  br i1 %cmptmp, label %ifcont, label %common.ret

common.ret:                                       ; preds = %entry, %str_concat, %arithmetic
  %common.ret.op = phi i64 [ %pyobject_string, %str_concat ], [ %pyobject152, %arithmetic ], [ %0, %entry ]
  ret i64 %common.ret.op

ifcont:                                           ; preds = %entry
  %subtmp = fadd double %final_payload, -1.000000e+00
  %float_to_i64 = bitcast double %subtmp to i64
  %payload_to_i64 = fptosi double %subtmp to i64
  %payload_masked = and i64 %payload_to_i64, 281474976710655
  %nanboxed = or disjoint i64 %payload_masked, 9221120237041090560
  %pyobject = select i1 %is_float.not.not, i64 %nanboxed, i64 %float_to_i64
  %calltmp = tail call i64 @fib(i64 %pyobject)
  %subtmp75 = fadd double %final_payload, -2.000000e+00
  %float_to_i6478 = bitcast double %subtmp75 to i64
  %payload_to_i6485 = fptosi double %subtmp75 to i64
  %payload_masked86 = and i64 %payload_to_i6485, 281474976710655
  %nanboxed89 = or disjoint i64 %payload_masked86, 9221120237041090560
  %pyobject90 = select i1 %is_float.not.not, i64 %nanboxed89, i64 %float_to_i6478
  %calltmp91 = tail call i64 @fib(i64 %pyobject90)
  %check_qnan92 = and i64 %calltmp, 9221120237041090560
  %is_float93.not = icmp eq i64 %check_qnan92, 9221120237041090560
  %1 = and i64 %calltmp, 1970324836974592
  %is_list98 = icmp ne i64 %1, 844424930131968
  %2 = and i64 %calltmp91, 1970324836974592
  %is_list109 = icmp ne i64 %2, 844424930131968
  %3 = and i64 %calltmp, 1688849860263936
  %lhs_is_string158159 = icmp eq i64 %3, 562949953421312
  %lhs_is_string158 = and i1 %is_list98, %lhs_is_string158159
  %lhs_is_string = select i1 %is_float93.not, i1 %lhs_is_string158, i1 false
  %4 = and i64 %calltmp91, 9222809086901354496
  %5 = icmp eq i64 %4, 9221683186994511872
  %rhs_is_string = and i1 %is_list109, %5
  %both_strings = and i1 %lhs_is_string, %rhs_is_string
  br i1 %both_strings, label %str_concat, label %arithmetic

str_concat:                                       ; preds = %ifcont
  %extract_ptr_payload = and i64 %calltmp, 281474976710655
  %payload_to_ptr = inttoptr i64 %extract_ptr_payload to ptr
  %extract_ptr_payload114 = and i64 %calltmp91, 281474976710655
  %payload_to_ptr115 = inttoptr i64 %extract_ptr_payload114 to ptr
  %lhs_len = tail call i64 @strlen(ptr noundef nonnull dereferenceable(1) %payload_to_ptr)
  %rhs_len = tail call i64 @strlen(ptr noundef nonnull dereferenceable(1) %payload_to_ptr115)
  %total_len = add i64 %rhs_len, 1
  %total_size = add i64 %total_len, %lhs_len
  %malloc_concat = tail call ptr @malloc(i64 %total_size)
  tail call void @llvm.memcpy.p0.p0.i64(ptr align 1 %malloc_concat, ptr align 1 %payload_to_ptr, i64 %lhs_len, i1 false)
  %rhs_dest = getelementptr i8, ptr %malloc_concat, i64 %lhs_len
  tail call void @llvm.memcpy.p0.p0.i64(ptr align 1 %rhs_dest, ptr align 1 %payload_to_ptr115, i64 %total_len, i1 false)
  %ptr_to_int = ptrtoint ptr %malloc_concat to i64
  %ptr_payload = and i64 %ptr_to_int, 281474976710655
  %pyobject_string = or disjoint i64 %ptr_payload, 9221683186994511872
  br label %common.ret

arithmetic:                                       ; preds = %ifcont
  %check_qnan103 = and i64 %calltmp91, 9221120237041090560
  %is_float104.not = icmp eq i64 %check_qnan103, 9221120237041090560
  %i64_to_f64118 = bitcast i64 %calltmp to double
  %extract_payload119 = and i64 %calltmp, 281474976710655
  %is_negative121.not = icmp ult i64 %extract_payload119, 140737488355328
  %masksel156 = select i1 %is_negative121.not, i64 0, i64 -281474976710656
  %signed_payload123 = or disjoint i64 %masksel156, %extract_payload119
  %payload_to_f64124 = sitofp i64 %signed_payload123 to double
  %final_payload125 = select i1 %is_float93.not, double %payload_to_f64124, double %i64_to_f64118
  %i64_to_f64128 = bitcast i64 %calltmp91 to double
  %extract_payload129 = and i64 %calltmp91, 281474976710655
  %is_negative131.not = icmp ult i64 %extract_payload129, 140737488355328
  %masksel157 = select i1 %is_negative131.not, i64 0, i64 -281474976710656
  %signed_payload133 = or disjoint i64 %masksel157, %extract_payload129
  %payload_to_f64134 = sitofp i64 %signed_payload133 to double
  %final_payload135 = select i1 %is_float104.not, double %payload_to_f64134, double %i64_to_f64128
  %6 = and i64 %check_qnan92, %calltmp91
  %result_is_float137.not = icmp eq i64 %6, 9221120237041090560
  %addtmp = fadd double %final_payload125, %final_payload135
  %float_to_i64140 = bitcast double %addtmp to i64
  %payload_to_i64147 = fptosi double %addtmp to i64
  %payload_masked148 = and i64 %payload_to_i64147, 281474976710655
  %nanboxed151 = or disjoint i64 %payload_masked148, 9221120237041090560
  %pyobject152 = select i1 %result_is_float137.not, i64 %nanboxed151, i64 %float_to_i64140
  br label %common.ret
}

; Function Attrs: mustprogress nofree nounwind willreturn memory(argmem: read)
declare i64 @strlen(ptr nocapture) local_unnamed_addr #1

; Function Attrs: mustprogress nofree nounwind willreturn allockind("alloc,uninitialized") allocsize(0) memory(inaccessiblemem: readwrite)
declare noalias noundef ptr @malloc(i64 noundef) local_unnamed_addr #2

; Function Attrs: nofree nounwind
define noundef i32 @main() local_unnamed_addr #0 {
entry:
  %calltmp = tail call i64 @fib(i64 9221120237041090568)
  %check_qnan = and i64 %calltmp, 9221120237041090560
  %is_float.not = icmp eq i64 %check_qnan, 9221120237041090560
  %tag_bits = lshr i64 %calltmp, 48
  %tag = and i64 %tag_bits, 7
  %is_bool = icmp eq i64 %tag, 1
  %is_string = icmp eq i64 %tag, 2
  %is_list = icmp eq i64 %tag, 3
  %0 = trunc i64 %tag_bits to i3
  %1 = select i1 %is_bool, i3 2, i3 %0
  %2 = select i1 %is_string, i3 3, i3 %1
  %3 = select i1 %is_list, i3 -4, i3 %2
  %i64_to_f64 = bitcast i64 %calltmp to double
  %extract_payload = and i64 %calltmp, 281474976710655
  %is_negative.not = icmp ult i64 %extract_payload, 140737488355328
  %masksel = select i1 %is_negative.not, i64 0, i64 -281474976710656
  %signed_payload = or disjoint i64 %masksel, %extract_payload
  %payload_to_f64 = sitofp i64 %signed_payload to double
  %final_payload = select i1 %is_float.not, double %payload_to_f64, double %i64_to_f64
  %trunc = select i1 %is_float.not, i3 %3, i3 1
  switch i3 %trunc, label %print_float [
    i3 3, label %print_string
    i3 0, label %print_int
  ]

print_int:                                        ; preds = %entry
  %to_int = fptosi double %final_payload to i64
  %printf_int = tail call i32 (ptr, ...) @printf(ptr nonnull dereferenceable(1) @int_format_string, i64 %to_int)
  br label %print_end

print_float:                                      ; preds = %entry
  %printf_float = tail call i32 (ptr, ...) @printf(ptr nonnull dereferenceable(1) @float_format_string, double %final_payload)
  br label %print_end

print_string:                                     ; preds = %entry
  %payload_to_ptr = inttoptr i64 %extract_payload to ptr
  %puts = tail call i32 @puts(ptr nonnull dereferenceable(1) %payload_to_ptr)
  br label %print_end

print_end:                                        ; preds = %print_string, %print_float, %print_int
  ret i32 0
}

; Function Attrs: nofree nounwind
declare noundef i32 @printf(ptr nocapture noundef readonly, ...) local_unnamed_addr #0

; Function Attrs: nocallback nofree nounwind willreturn memory(argmem: readwrite)
declare void @llvm.memcpy.p0.p0.i64(ptr noalias nocapture writeonly, ptr noalias nocapture readonly, i64, i1 immarg) #3

; Function Attrs: nofree nounwind
declare noundef i32 @puts(ptr nocapture noundef readonly) local_unnamed_addr #0

attributes #0 = { nofree nounwind }
attributes #1 = { mustprogress nofree nounwind willreturn memory(argmem: read) }
attributes #2 = { mustprogress nofree nounwind willreturn allockind("alloc,uninitialized") allocsize(0) memory(inaccessiblemem: readwrite) "alloc-family"="malloc" }
attributes #3 = { nocallback nofree nounwind willreturn memory(argmem: readwrite) }
