python-compiler/tests/snapshots/complex_control_flow__gcd_euclidean.snap
---
source: tests/complex_control_flow.rs
expression: llvm_ir
---
; ModuleID = 'main'
source_filename = "main"

@int_format_string = private unnamed_addr constant [4 x i8] c"%d\0A\00", align 1

; Function Attrs: nofree norecurse nosync nounwind memory(none)
define i64 @gcd(i64 %0, i64 %1) local_unnamed_addr #0 {
entry:
  %check_qnan79 = and i64 %1, 9221120237041090560
  %is_float.not.not80 = icmp eq i64 %check_qnan79, 9221120237041090560
  %i64_to_f6481 = bitcast i64 %1 to double
  %extract_payload82 = and i64 %1, 281474976710655
  %is_negative.not83 = icmp ult i64 %extract_payload82, 140737488355328
  %masksel84 = select i1 %is_negative.not83, i64 0, i64 -281474976710656
  %signed_payload85 = or disjoint i64 %masksel84, %extract_payload82
  %payload_to_f6486 = sitofp i64 %signed_payload85 to double
  %final_payload87 = select i1 %is_float.not.not80, double %payload_to_f6486, double %i64_to_f6481
  %cmptmp88 = fcmp ueq double %final_payload87, 0.000000e+00
  br i1 %cmptmp88, label %loop_exit, label %loop_body

loop_body:                                        ; preds = %entry, %loop_body
  %final_payload91 = phi double [ %final_payload, %loop_body ], [ %final_payload87, %entry ]
  %a.090 = phi i64 [ %b.089, %loop_body ], [ %0, %entry ]
  %b.089 = phi i64 [ %pyobject, %loop_body ], [ %1, %entry ]
  %check_qnan15 = and i64 %a.090, 9221120237041090560
  %is_float16.not.not = icmp eq i64 %check_qnan15, 9221120237041090560
  %i64_to_f6452 = bitcast i64 %a.090 to double
  %extract_payload53 = and i64 %a.090, 281474976710655
  %is_negative55.not = icmp ult i64 %extract_payload53, 140737488355328
  %masksel78 = select i1 %is_negative55.not, i64 0, i64 -281474976710656
  %signed_payload57 = or disjoint i64 %masksel78, %extract_payload53
  %payload_to_f6458 = sitofp i64 %signed_payload57 to double
  %final_payload59 = select i1 %is_float16.not.not, double %payload_to_f6458, double %i64_to_f6452
  %2 = and i64 %b.089, 9221120237041090560
  %3 = and i64 %2, %a.090
  %result_is_float.not = icmp eq i64 %3, 9221120237041090560
  %modtmp = frem double %final_payload59, %final_payload91
  %float_to_i64 = bitcast double %modtmp to i64
  %payload_to_i64 = fptosi double %modtmp to i64
  %payload_masked = and i64 %payload_to_i64, 281474976710655
  %nanboxed = or disjoint i64 %payload_masked, 9221120237041090560
  %pyobject = select i1 %result_is_float.not, i64 %nanboxed, i64 %float_to_i64
  %check_qnan = and i64 %pyobject, 9221120237041090560
  %is_float.not.not = icmp eq i64 %check_qnan, 9221120237041090560
  %i64_to_f64 = bitcast i64 %pyobject to double
  %extract_payload = and i64 %pyobject, 281474976710655
  %is_negative.not = icmp ult i64 %extract_payload, 140737488355328
  %masksel = select i1 %is_negative.not, i64 0, i64 -281474976710656
  %signed_payload = or disjoint i64 %masksel, %extract_payload
  %payload_to_f64 = sitofp i64 %signed_payload to double
  %final_payload = select i1 %is_float.not.not, double %payload_to_f64, double %i64_to_f64
  %cmptmp = fcmp ueq double %final_payload, 0.000000e+00
  br i1 %cmptmp, label %loop_exit, label %loop_body

loop_exit:                                        ; preds = %loop_body, %entry
  %a.0.lcssa = phi i64 [ %0, %entry ], [ %b.089, %loop_body ]
  ret i64 %a.0.lcssa
}

; Function Attrs: nofree nounwind
define noundef i32 @main() local_unnamed_addr #1 {
entry:
  br label %loop_body.i

loop_body.i:                                      ; preds = %loop_body.i, %entry
  %final_payload91.i = phi double [ %payload_to_f64.i, %loop_body.i ], [ 1.800000e+01, %entry ]
  %a.090.i = phi i64 [ %b.089.i, %loop_body.i ], [ 9221120237041090608, %entry ]
  %b.089.i = phi i64 [ %nanboxed.i, %loop_body.i ], [ 9221120237041090578, %entry ]
  %extract_payload53.i = and i64 %a.090.i, 281474976710655
  %is_negative55.not.i = icmp ult i64 %extract_payload53.i, 140737488355328
  %masksel78.i = select i1 %is_negative55.not.i, i64 0, i64 -281474976710656
  %signed_payload57.i = or disjoint i64 %masksel78.i, %extract_payload53.i
  %payload_to_f6458.i = sitofp i64 %signed_payload57.i to double
  %modtmp.i = frem double %payload_to_f6458.i, %final_payload91.i
  %payload_to_i64.i = fptosi double %modtmp.i to i64
  %payload_masked.i = and i64 %payload_to_i64.i, 281474976710655
  %nanboxed.i = or disjoint i64 %payload_masked.i, 9221120237041090560
  %is_negative.not.i = icmp ult i64 %payload_masked.i, 140737488355328
  %masksel.i = select i1 %is_negative.not.i, i64 0, i64 -281474976710656
  %signed_payload.i = or disjoint i64 %masksel.i, %payload_masked.i
  %payload_to_f64.i = sitofp i64 %signed_payload.i to double
  %cmptmp.i = icmp eq i64 %signed_payload.i, 0
  br i1 %cmptmp.i, label %print_end, label %loop_body.i

print_end:                                        ; preds = %loop_body.i
  %extract_payload = and i64 %b.089.i, 281474976710655
  %is_negative.not = icmp ult i64 %extract_payload, 140737488355328
  %masksel = select i1 %is_negative.not, i64 0, i64 -281474976710656
  %signed_payload = or disjoint i64 %masksel, %extract_payload
  %payload_to_f64 = sitofp i64 %signed_payload to double
  %to_int = fptosi double %payload_to_f64 to i64
  %printf_int = tail call i32 (ptr, ...) @printf(ptr nonnull dereferenceable(1) @int_format_string, i64 %to_int)
  ret i32 0
}

; Function Attrs: nofree nounwind
declare noundef i32 @printf(ptr nocapture noundef readonly, ...) local_unnamed_addr #1

attributes #0 = { nofree norecurse nosync nounwind memory(none) }
attributes #1 = { nofree nounwind }
